--- a/JenkinsFile
+++ b/JenkinsFile
@@ -5,7 +5,7 @@ pipeline{
         stage ('Compile Stage'){
             steps {
                 withMaven(maven : 'Maven_3'){
-                    sh 'mvn clean compile'
+                    sh 'mvn clean package'
                 }
             }
         }
