--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,9 +4,7 @@ pipeline{
     stages{
         stage ('Compile Stage'){
             steps {
-                withMaven(maven : 'Maven_3'){
-                    sh 'mvn clean package'
-                }
+                    sh 'mvn clean compile'
             }
         }
         stage ('Testing Stage'){
