--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,10 +4,9 @@ pipeline{
     stages{
         stage ('Compile Stage'){
             steps {
-                sh 'set M2_HOME = 'C:\DevTools\Maven\apache-maven-3.6.0''
-                sh 'set PATH=C:\DevTools\Maven\apache-maven-3.6.0\bin'
-                sh 'set PATH=%PATH%;C:\Windows\System32'
-m               sh 'mvn clean package'
+                withMaven(maven : 'Maven_3'){
+                    sh 'mvn clean compile'
+                }
             }
         }
         stage ('Testing Stage'){
