--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,9 +4,9 @@ pipeline{
     stages{
         stage ('Compile Stage'){
             steps {
-                withMaven(maven : 'Maven_3'){
-                    sh 'mvn clean package'
-                }
+                dev mvnHome = tool name: 'Maven_3', type: 'maven'
+                sh "${mvnHome}/bin/mvn package"
+
             }
         }
         stage ('Testing Stage'){
