--- a/JenkinsFile
+++ b/JenkinsFile
@@ -4,8 +4,9 @@ pipeline{
     stages{
         stage ('Compile Stage'){
             steps {
-                def mvnHome = tool name: 'Maven_3', type: 'maven'
-                sh "${mvnHome}/bin/mvn package"
+                withMaven(maven : 'Maven_3'){
+                    sh 'mvn clean compile'
+                }
             }
         }
         stage ('Testing Stage'){
