--- a/JenkinsFile
+++ b/JenkinsFile
@@ -1,24 +1,29 @@
-pipeline{
+pipeline {
     agent any
 
-    stages{
-        stage ('Compile Stage'){
+    stages {
+        stage ('Compile Stage') {
+
             steps {
-                withMaven(maven : 'Maven_3'){
+                withMaven(maven : 'maven_3_5_0') {
                     sh 'mvn clean compile'
                 }
             }
         }
-        stage ('Testing Stage'){
+
+        stage ('Testing Stage') {
+
             steps {
-                withMaven(maven : 'Maven_3'){
+                withMaven(maven : 'maven_3_5_0') {
                     sh 'mvn test'
                 }
             }
         }
-        stage ('Deployment Stage'){
+
+
+        stage ('Deployment Stage') {
             steps {
-                withMaven(maven : 'Maven_3'){
+                withMaven(maven : 'maven_3_5_0') {
                     sh 'mvn deploy'
                 }
             }
